--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
+  flutter_secure_storage: ^9.0.0
   flutter_riverpod: ^2.4.9
   dio: ^5.4.0
   image_picker: ^1.0.7
