--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,8 @@ flutter:
     - assets/images/yconic-text.png
     - assets/images/single-line-motto.png
     - assets/default_avatar.jpg
+    - assets/animations/ai_loading_suggestion.json
+    - assets/animations/ai_loading_suggestion_two.json
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
